--- a/PBL-BetterTogether/style/index.css
+++ b/PBL-BetterTogether/style/index.css
@@ -1,7 +1,6 @@
 * {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
 body {
     display: flex;
     margin: 0;
@@ -9,6 +8,8 @@ body {
     flex-direction: column;
     height: 2000px;
 }
+
+/* header */
 
 header {
     position: fixed;
@@ -22,7 +23,6 @@ header {
     padding-bottom: 21px;
     background-color: white;
 }
-
 .header-section {
     display: flex;
     align-items: center;
@@ -30,7 +30,6 @@ header {
     height: 80px;
     width: 100%;
 }
-
 .header-section .logo-section {
     display: flex;
     flex-direction: row;
@@ -40,11 +39,9 @@ header {
     margin-left: 80px;
     cursor: pointer;
 }
-
 .logo-section .logo {
     width: 100%;
 }
-
 .header-section .account-section {
     display: flex;
     flex-direction: row;
@@ -57,7 +54,6 @@ header {
     border-radius: 25px;
     cursor: pointer;
 }
-
 .header-section .account-section:hover {
     box-shadow: 0px 2px 3px lightgray;
     transition: all 0.15s ease-in-out;
@@ -77,7 +73,6 @@ header {
     border-radius: 32.5px;
     box-shadow: 1px 1px 4px lightgray;
 }
-
 .search-container:hover {
     background-color: rgb(250, 250, 250);
     transition: all 0.15s ease-in-out;
@@ -98,12 +93,10 @@ header {
     font-weight: 400;
     padding-bottom: 5px;
 }
-
 .search-input:hover {
     background-color: rgb(250, 250, 250);
     transition: all 0.15s ease-in-out;
 }
-
 .search-input::placeholder {
     font-weight: normal;
     font-size: 17px;
@@ -119,7 +112,6 @@ header {
     max-width: 48px;
     margin-right: 8px;
 }
-
 .search-button {
     height: 100%;
     width: 100%;
@@ -129,12 +121,10 @@ header {
     padding-top: 4px;
     cursor: pointer;
 }
-
 .search-img {
     width: 18px;
     background-color: rgb(67, 64, 145);
 }
-
 @media (max-width: 1440px) {
     header {
         gap: 20px;
@@ -161,7 +151,6 @@ header {
     padding: 0px 80px;
     box-sizing: border-box;
 }
-
 .icon {
     display: flex;
     flex-direction: column;
@@ -173,63 +162,99 @@ header {
     cursor: pointer;
     transition: all 0.15s ease-in-out;
 }
-
 .icon:hover {
     border-color: black;
     border-bottom: 3px solid black;
 }
-
 .icon .icon-img {
     opacity: 0.6;
     width: 24px;
     transition: all 0.15s ease-in-out;
 }
-
 .icon:hover .icon-img {
     opacity: 1;
 }
-
 .icon .icon-text {
     font-weight: 500;
     font-size: 12px;
     color: gray;
     transition: all 0.15s ease-in-out;
 }
-
 .icon:hover .icon-text {
     color: black;
 }
-
 @media (max-width: 1440px) {
     .icons-container {
         padding: 23px 40px 23px 40px;
-        margin-top: 189px;
+        margin-top: 181px;
+        height: 78px;
+    }
+    .icon:hover {
+        border-bottom: none;
     }
 }
 
 
+/* parameters */
+
+.parameters-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 2fr 1fr 1fr;
+    width: 100%;
+    padding: 0px 80px;
+    margin: 5px 0px;
+    box-sizing: border-box;
+}
+.parameter {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-left: 1px solid grey;
+    color: grey;
+}
+@media (max-width: 1440px) {
+    .parameters-container {
+        padding: 0px 40px;
+    }
+}
+
 /* NGO listing */
 
 .listing-section {
+    background-color: lightcoral;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
     border: 0px solid black;
     width: 100%;
-    padding-left: 160px;
+    padding: 0px 80px;
+    margin: 6px;
+    box-sizing: border-box;
 }
-
-.listing-section .ngo {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 400px;
-    width: 20%;
+.ngo {
+    display: grid;
+    grid-template-columns: 1fr 1fr 2fr 1fr 1fr;
+    align-content: center;
+    background-color: lightblue;
+    width: 100%;
     border: 1px solid gray;
+    border-radius: 8px;
+    padding: 0px 5px;
+    margin: 4px 0px;
 }
-
-.ngo .name {
+.name_logo {
     display: flex;
     flex-direction: column;
-    text-align: center;
+    align-items: center;
+    padding: 5px 0px;
+}
+.ngo_logo {
+    height: 80px;
+    width: 80px;;
+}
+@media (max-width: 1440px) {
+    .listing-section {
+        padding: 0px 40px;
+    }
 }
