--- a/PBL-BetterTogether/style/index.css
+++ b/PBL-BetterTogether/style/index.css
@@ -32,7 +32,6 @@ header {
 }
 .header-section .logo-section {
     display: flex;
-    flex-direction: row;
     align-items: center;
     justify-content: center;
     width: 44px;
@@ -77,7 +76,9 @@ header {
     background-color: rgb(250, 250, 250);
     transition: all 0.15s ease-in-out;
 }
-
+.search-text {
+    font-size: 12px;
+}
 
 /* search bar */
 
@@ -232,29 +233,48 @@ header {
     box-sizing: border-box;
 }
 .ngo {
+    position: relative;
     display: grid;
     grid-template-columns: 1fr 1fr 2fr 1fr 1fr;
     align-content: center;
+    justify-content: center;
     width: 100%;
     border: 1px solid gray;
     border-radius: 8px;
-    padding: 0px 5px;
+    padding: 4px 5px;
     margin: 4px 0px;
 }
-.name_logo {
+.ngo:hover {
+    background-color: rgb(249, 249, 249);
+    transition: all 0.2s ease-in-out;
+    cursor: pointer;
+}
+.name-logo {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     padding: 5px 0px;
 }
-.ngo_logo {
+.ngo-logo {
     height: 80px;
     width: 80px;
     border-radius: 40px;
 }
-.ngo_parameter {
+.ngo-parameter {
     display: flex;
-    justify-content: center  ;
+    justify-content: center;
+    align-items: center;
+}
+.ngo-status {
+    position: absolute;
+    display: flex;
+    background-color: rgb(105, 167, 105);
+    height: 12px;
+    width: 12px;
+    border-radius: 6px;
+    left: 5px;
+    top: 4px;
 }
 @media (max-width: 1440px) {
     .listing-section {
