--- a/PBL-BetterTogether/style/registerNGO.css
+++ b/PBL-BetterTogether/style/registerNGO.css
@@ -1,12 +1,13 @@
 * {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
 }
 body {
     display: flex;
     margin: 0;
     align-items: center;
     flex-direction: column;
-    height: 2000px;
+    margin-bottom: 10px;
 }
 
 /* header */
@@ -59,6 +60,14 @@ header {
     font-size: 29px;
     padding-bottom: 12px;
 }
+.progress-bar-container {
+    width: 100%;
+    padding: 0px 80px;
+    box-sizing: border-box;
+}
+.progress-bar {
+    width: 100%;
+}
 
 /* form */
 .form-container {
@@ -86,16 +95,27 @@ header {
     padding: 0px 16px;
     box-sizing: border-box;
     row-gap: 6px;
-    margin-top: 16px;
+    margin-top: 20px;
 }
 .text-input {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 34px;
+    height: 24px;
     border-radius: 10px;
     border: 1px solid gray;
     padding: 2px 12px;
     font-size: 17px;
     padding-bottom: 5px;
+}
+.radio-button {
+    display: flex;
+    flex-direction: row;
+}
+.staff-table {
+    display: flex;
+    align-items: center;
+    table, th, td {
+        border: 1px solid;
+    }
 }
